--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "axios": "^1.9.0",
     "browser-router": "^0.2.0",
+    "formik": "^2.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.0",
-    "router": "^2.2.0"
+    "router": "^2.2.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
